<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="btn_greetings_download_available">Download</string>
    <string name="btn_greetings_download_in_progress">Loading…</string>
    <string name="btn_greetings_download_error">Retry</string>
    <string name="btn_greetings_download_completed">Completed!</string>

    <!-- Intro screen -->
    <string name="label_greetings">Before starting please download currency pairs for any of the supported exchanges:</string>
    <string name="label_note">Note: you can manage it later from settings menu.</string>

    <!-- A11y -->
    <string name="a11y_app_logo">App logo</string>

</resources>
