<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_exchange_list_item"
    android:layout_marginStart="@dimen/baseline_grid_2x"
    android:layout_marginEnd="@dimen/baseline_grid_2x">

    <ImageView
        android:id="@+id/exchangeLogoImageView"
        android:layout_width="@dimen/size_exchange_image"
        android:layout_height="@dimen/size_exchange_image"
        android:contentDescription="@string/a11y_app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exchangeNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exchangeNameTextView"
        style="@style/XTTextHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/baseline_grid_1x"
        android:layout_marginEnd="@dimen/baseline_grid_1x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exchangeDownloadButton"
        app:layout_constraintStart_toEndOf="@+id/exchangeLogoImageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Binance" />

    <com.sedsoftware.core.presentation.view.DownloadButton
        android:id="@+id/exchangeDownloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        app:color_available="@color/colorAvailable"
        app:color_in_progress="@color/colorInProgress"
        app:color_completed="@color/colorCompleted"
        app:color_error="@color/colorError"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exchangeNameTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:text_available="@string/btn_greetings_download_available"
        app:text_in_progress="@string/btn_greetings_download_in_progress"
        app:text_completed="@string/btn_greetings_download_completed"
        app:text_error="@string/btn_greetings_download_error" />

</androidx.constraintlayout.widget.ConstraintLayout>
